<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/row_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_text_countdown_row"
                    style="@style/row_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:text="@string/title"
                    android:textAlignment="viewStart"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/notification_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/notification_content_descrip"
                    android:padding="12dp"
                    app:srcCompat="@drawable/bell_icon" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="center|end"
                    android:padding="4dp"
                    android:text="@string/notification_string"
                    android:textAlignment="textEnd"
                    android:visibility="gone" />

                <Switch
                    android:id="@+id/notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:minWidth="48dp"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/countdown_update_textview"
                style="@style/row_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12sp"
                android:text="@string/placeholder_time"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>